[package]
name = "bellande_node_importance"
version = "0.1.1"
edition = "2021"
authors = ["Bellande Robotics Sensors Research Innovation Center"]
description = "A tool for calculating n-dimensional node importance via API or local executable"
license = "GPL-3.0-or-later"
repository = "https://github.com/Robotics-Sensors/bellande_node_importance"
readme = "README.md"
keywords = ["robotics", "algorithms", "research", "spatial-analysis", "node-importance"]
categories = ["science", "algorithms", "mathematics"]

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
structopt = "0.3"

[lib]
name = "bellande_node_importance"
path = "src/bellande_node_importance.rs"
